// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dom2 static style complex scenarios should handle comprehensive CSS with all property types: comprehensive-css 1`] = `
{
  "--border-radius": {
    "setterCode": "defineStyleVariable("--border-radius", "8px")",
    "valueCode": ""8px"",
  },
  "--opacity-value": {
    "setterCode": "defineStyleVariable("--opacity-value", "0.8")",
    "valueCode": ""0.8"",
  },
  "--primary-color": {
    "setterCode": "defineStyleVariable("--primary-color", "#007AFF")",
    "valueCode": ""#007AFF"",
  },
  "--secondary-color": {
    "setterCode": "defineStyleVariable("--secondary-color", "#34C759")",
    "valueCode": ""#34C759"",
  },
  "--spacing": {
    "setterCode": "defineStyleVariable("--spacing", "16px")",
    "valueCode": ""16px"",
  },
  "align-items": {
    "setterCode": "setStyleAlignItems(UniCSSAlignItemsType.Center)",
    "valueCode": "UniCSSAlignItemsType.Center",
  },
  "border-bottom-style": {
    "setterCode": "setStyleBorderBottomStyle(UniCSSBorderStyleType.Solid)",
    "valueCode": "UniCSSBorderStyleType.Solid",
  },
  "border-bottom-width": {
    "setterCode": "setStyleBorderBottomWidth(2, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{2, UniCSSUnitType.PX}",
  },
  "border-left-style": {
    "setterCode": "setStyleBorderLeftStyle(UniCSSBorderStyleType.Dashed)",
    "valueCode": "UniCSSBorderStyleType.Dashed",
  },
  "border-left-width": {
    "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "display": {
    "setterCode": "setStyleDisplay(UniCSSDisplayType.Flex)",
    "valueCode": "UniCSSDisplayType.Flex",
  },
  "flex-direction": {
    "setterCode": "setStyleFlexDirection(UniCSSFlexDirectionType.Row)",
    "valueCode": "UniCSSFlexDirectionType.Row",
  },
  "flex-grow": {
    "setterCode": "setStyleFlexGrow(1)",
    "valueCode": "1",
  },
  "flex-shrink": {
    "setterCode": "setStyleFlexShrink(0)",
    "valueCode": "0",
  },
  "height": {
    "setterCode": "setStyleHeight(200, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{200, UniCSSUnitType.PX}",
  },
  "justify-content": {
    "setterCode": "setStyleJustifyContent(UniCSSJustifyContentType.FlexStart)",
    "valueCode": "UniCSSJustifyContentType.FlexStart",
  },
  "left": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Left, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
  "margin-bottom": {
    "setterCode": "setStyleMarginBottom(8, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{8, UniCSSUnitType.PX}",
  },
  "margin-top": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MarginTop, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
  "max-width": {
    "setterCode": "setStyleMaxWidth(100, UniCSSUnitType.PCT)",
    "valueCode": "UniCSSUnitValue{100, UniCSSUnitType.PCT}",
  },
  "min-height": {
    "setterCode": "setStyleMinHeight(50, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{50, UniCSSUnitType.PX}",
  },
  "padding-left": {
    "setterCode": "setStylePaddingLeft(12, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{12, UniCSSUnitType.PX}",
  },
  "padding-right": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.PaddingRight, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
  "position": {
    "setterCode": "setStylePosition(UniCSSPositionType.Relative)",
    "valueCode": "UniCSSPositionType.Relative",
  },
  "top": {
    "setterCode": "setStyleTop(10, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{10, UniCSSUnitType.PX}",
  },
  "width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Width, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-android-dom-kt 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-harmony-dom-c 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
  "align-items": {
    "setterCode": "setStyleAlignItems(UniCSSAlignItemsType.Center)",
    "valueCode": "UniCSSAlignItemsType.Center",
  },
  "display": {
    "setterCode": "setStyleDisplay(UniCSSDisplayType.Flex)",
    "valueCode": "UniCSSDisplayType.Flex",
  },
  "height": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Height, "var(--size)")",
    "valueCode": ""var(--size)"",
  },
  "left": {
    "setterCode": "setStyleLeft(0, UniCSSUnitType.NONE)",
    "valueCode": "UniCSSUnitValue{0, UniCSSUnitType.NONE}",
  },
  "position": {
    "setterCode": "setStylePosition(UniCSSPositionType.Absolute)",
    "valueCode": "UniCSSPositionType.Absolute",
  },
  "top": {
    "setterCode": "setStyleTop(0, UniCSSUnitType.NONE)",
    "valueCode": "UniCSSUnitValue{0, UniCSSUnitType.NONE}",
  },
  "width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Width, "var(--size)")",
    "valueCode": ""var(--size)"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-harmony-nv-c 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
  "background-color": {
    "setterCode": "backgroundColor(0xff0000ff)",
    "valueCode": "0xff0000ff",
  },
  "display": {
    "setterCode": "display(UniCSSDisplayType.Flex)",
    "valueCode": "UniCSSDisplayType.Flex",
  },
  "opacity": {
    "setterCode": "opacity(0.9)",
    "valueCode": "0.9",
  },
  "position": {
    "setterCode": "position(UniCSSPositionType.Absolute)",
    "valueCode": "UniCSSPositionType.Absolute",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-ios-dom-oc 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle edge cases with complex CSS: edge-cases 1`] = `
{
  "--double-nested": {
    "setterCode": "defineStyleVariable("--double-nested", "var(--nested-var)")",
    "valueCode": ""var(--nested-var)"",
  },
  "--empty-var": {
    "setterCode": "defineStyleVariable("--empty-var", "")",
    "valueCode": """",
  },
  "--nested-var": {
    "setterCode": "defineStyleVariable("--nested-var", "var(--valid-var)")",
    "valueCode": ""var(--valid-var)"",
  },
  "--valid-var": {
    "setterCode": "defineStyleVariable("--valid-var", "10px")",
    "valueCode": ""10px"",
  },
  "display": {
    "setterCode": "setStyleDisplay(UniCSSDisplayType.Flex)",
    "valueCode": "UniCSSDisplayType.Flex",
  },
  "height": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Height, "var(--valid-var)")",
    "valueCode": ""var(--valid-var)"",
  },
  "left": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Left, "var(--double-nested)")",
    "valueCode": ""var(--double-nested)"",
  },
  "max-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MaxWidth, "var(--valid-var)")",
    "valueCode": ""var(--valid-var)"",
  },
  "min-height": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MinHeight, "var(--empty-var)")",
    "valueCode": ""var(--empty-var)"",
  },
  "position": {
    "setterCode": "setStylePosition(UniCSSPositionType.Absolute)",
    "valueCode": "UniCSSPositionType.Absolute",
  },
  "top": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Top, "var(--nested-var)")",
    "valueCode": ""var(--nested-var)"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle mixed variable usage and regular values: mixed-variables 1`] = `
{
  "--base-size": {
    "setterCode": "defineStyleVariable("--base-size", "20px")",
    "valueCode": ""20px"",
  },
  "--border-width": {
    "setterCode": "defineStyleVariable("--border-width", "2px")",
    "valueCode": ""2px"",
  },
  "--color-blue": {
    "setterCode": "defineStyleVariable("--color-blue", "#0000FF")",
    "valueCode": ""#0000FF"",
  },
  "--color-red": {
    "setterCode": "defineStyleVariable("--color-red", "#FF0000")",
    "valueCode": ""#FF0000"",
  },
  "border-bottom-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.BorderBottomWidth, "var(--border-width)")",
    "valueCode": ""var(--border-width)"",
  },
  "border-left-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.BorderLeftWidth, "var(--border-width)")",
    "valueCode": ""var(--border-width)"",
  },
  "border-right-width": {
    "setterCode": "setStyleBorderRightWidth(3, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{3, UniCSSUnitType.PX}",
  },
  "border-top-width": {
    "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "height": {
    "setterCode": "setStyleHeight(30, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{30, UniCSSUnitType.PX}",
  },
  "margin-bottom": {
    "setterCode": "setStyleMarginBottom(10, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{10, UniCSSUnitType.PX}",
  },
  "margin-top": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MarginTop, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
  "max-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MaxWidth, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
  "min-height": {
    "setterCode": "setStyleMinHeight(15, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{15, UniCSSUnitType.PX}",
  },
  "padding-left": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.PaddingLeft, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
  "padding-right": {
    "setterCode": "setStylePaddingRight(5, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{5, UniCSSUnitType.PX}",
  },
  "width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Width, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
}
`;
